<resources>
    <string name="app_name">App Locker</string>
    <string name="set_pin">Set PIN (e.g. 1234)</string>
    <string name="save_pin">Save PIN</string>
    <string name="grant_usage">Grant Usage Access</string>
    <string name="grant_overlay">Grant Overlay Permission</string>
    <string name="start_service">Start Locker Service</string>
    <string name="enter_pin">Enter PIN to Unlock</string>
    <string name="unlock">Unlock</string>
</resources>
