<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_pin"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btnSavePin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_pin" />

    <Button
        android:id="@+id/btnUsageAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_usage" />

    <Button
        android:id="@+id/btnOverlayAccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_overlay" />

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_service" />

    <EditText
        android:id="@+id/etSearchApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Search apps..."
        android:inputType="text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"/>
</LinearLayout>
